Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9913

ComboBox popuplist is not correctly layouted in fullscreen mode

XMLWordPrintable

    • a0b2992fe166bed4020e14fca9742ca3a7c9ae9e, 28ce5c1f2c0dbbfe45b5c3744bf03a2548c12223

      Steps:
      1. Launch Softkeys from fluidlauncher
      2. Click "Lopp SK window type" once in order to switch to "normal fullscreen" mode
      3. Select and click ComboBox to open pop-up list

      -> Pop-up list is vertically misplaced i.e. it does not start from left edge of the screen. This is visible in Shot(15).png. Shot(14).png depicts how popuplist is placed in maximized mode.

      In addition popup list launched from fullscreen widget (Shot(15).png) should probably have Select-Cancel softkeys?

        1. Shot(14).png
          Shot(14).png
          28 kB
        2. Shot(15).png
          Shot(15).png
          22 kB
        3. Shot(21).png
          Shot(21).png
          28 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            e0101981 Janne Anttila
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes