ComboBox popuplist is not correctly layouted in fullscreen mode

This is part two of the fix for issue QTBUG-9913.

This corrects the left margin of the ComboBox menu to start from the
left screen border (for LetToRight UI Layout), instead of having small
margin.

Task-number: QTBUG-9913
Reviewed-by: Alessandro Portale